--- a/vpc/Makefile
+++ b/vpc/Makefile
@@ -9,18 +9,21 @@ help:
             printf "%-15s %s\n" $$help_command $$help_info ; \
         done
 
-dev-apply: ## Create Dev Environment
+clean:
+	@rm -rf .terraform
+
+dev-apply: clean ## Create Dev Environment
 	@terraform init -backend-config=env/dev-backend.tfvars
 	@terraform apply -auto-approve -var-file=env/dev.tfvars
 
-prod-apply: ## Create prod Environment
+prod-apply: clean ## Create Prod Environment
 	@terraform init -backend-config=env/prod-backend.tfvars
 	@terraform apply -auto-approve -var-file=env/prod.tfvars
 
-dev-destroy: ## destroy Dev Environment
+dev-destroy: clean ## Destroy Dev Environment
 	@terraform init -backend-config=env/dev-backend.tfvars
 	@terraform destroy -auto-approve -var-file=env/dev.tfvars
 
-prod-destroy: ## destroy Dev Environment
+prod-destroy: clean ## Destroy Prod Environment
 	@terraform init -backend-config=env/prod-backend.tfvars
 	@terraform destroy -auto-approve -var-file=env/prod.tfvars
